--- a/src/less/authenticate.less
+++ b/src/less/authenticate.less
@@ -6,7 +6,7 @@
 .authenticate-container {
   text-align: center;
   width: 50%;
-  max-width: 400px;
+  max-width: 310px;
 }
 
 .authenticate-form {
