--- a/src/less/comments.less
+++ b/src/less/comments.less
@@ -25,6 +25,7 @@
     border: 1px solid @borderColor;
     background-color: #F6F8F9;
     justify-content: flex-end;
+    height: 46px;
     width: 100%;
 }
 
@@ -33,6 +34,9 @@
     margin: 0;
     font-size: 15px;
     padding: 12px;
+    margin-top: -1px;
+    margin-right: -1px;
+    height: 48px;
     background: @mainColor;
     border: 1px solid @mainColor;
 }
