--- a/src/less/dashboard.less
+++ b/src/less/dashboard.less
@@ -65,6 +65,7 @@
     height: 100%;
     position: fixed;
     overflow-y: scroll;
+    top: 60px;
     left: -290px;
     display: flex;
     transition: left .4s;
@@ -117,12 +118,9 @@
     }
 }
 
-.course-menu {
-    margin-top: 60px;
-}
-
 .course-menu__header {
     border-bottom: 1px solid @grey;
+    border-right: 1px solid @grey;
     position: fixed;
     top: 0;
     width: 278px;  // 290px - 12px
