--- a/src/less/register.less
+++ b/src/less/register.less
@@ -1,5 +1,6 @@
 .register {
   margin-top: 16px;
+  padding: 0 20px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -12,6 +13,8 @@
 .register-form {
   display: flex;
   flex-direction: column;
+  max-width: 310px;
+  width: 100%;
 }
 .register-logo {
   animation: register-logo-spin infinite 20s linear;
